2008-07-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_soap.c: fixed compilation on AIX in 64bit mode (converted
      int64 into long long.
      Thanks to "Bostock James" <james.bostock at comverse.com> for notice.

2008-07-28 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: require C99 compiler because we use some of
      features of this standart.
      Thanks to "Bostock James" <james.bostock at comverse.com> for the patch.
      Msg-ID: <84E219D8B81E5F4688C4A8992426CD83013D79D8@fr-par-mail01.comverse.com>

2008-07-28 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml: applied patch that clarify that float can
      be used for throughput.
      Thanks to Vincent CHAVANIS.

2008-07-28 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_emi_x25.c: fixed X25 speed (AIX does not define B115200).
      Thanks to "Bostock James" <james.bostock at comverse.com> for the patch
      and to Vincent CHAVANIS for pushing it into CVS.
      Msg-ID: <84E219D8B81E5F4688C4A8992426CD8301318309@fr-par-mail01.comverse.com>

2008-07-27  Stipe Tolj  <stolj at kannel.org>
    * gwlib/dbpool[_sqlite3].c: fix minor compiler warnings. NLC.

2008-07-26 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smsc_http.c, gwlib/cfg.def: added new
      config option 'use-ssl' that allow to use SSL for listen port.

2008-07-24 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed hardcoded library detection for oracle. Not
      all OSs have .so.

2008-07-24 Alexander Malysh <amalysh at kannel.org>
    * gwlib/dbpool.c: Fixed deadlock in dbpool_conn_consume if we don't have any
      database connections available anymore and database is temporarely not
      available.

2008-07-24  Stipe Tolj  <stolj at kannel.org>
    * gwlib/cfg.c: add more semantical error statement if we detect an unknown