@@ -1,3 +1,7 @@
+2008-08-02 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/charset.c, radius/radius_acct.c, wap/wtp_resp.c: fixed compiler
+      warnings.
+
 2008-07-29 Alexander Malysh <amalysh at kannel.org>
     * gw/smsc/smsc_soap.c: fixed compilation on AIX in 64bit mode (converted
       int64 into long long.
